Save GUI source version

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F15 Guide</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/f15-guide/icon-192.png" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="/f15-guide/icon-192.png" />
+
+    <!-- Optional theme color -->
+    <meta name="theme-color" content="#000000" />
   </head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
